Closed
Bug 237957
Opened 21 years ago
Closed 21 years ago
M17beta crash [@ nsAccessibleHyperText::nsAccessibleHyperText ]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: Louie.Zhao)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
1.28 KB,
patch
|
yuanyi21
:
review+
Henry.Jia
:
superreview+
mkaply
:
approval1.7+
|
Details | Diff | Splinter Review |
Set GNOME_ACCESSIBILITY=1, start mozilla and visit http://house.sinoi.com/,
mozilla will crash. If you don't set GNOME_ACCESSIBILITY, this website can
display correctly.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #144298 -
Flags: review?(kyle.yuan)
Attachment #144298 -
Flags: review?(kyle.yuan) → review+
Summary: Set GNOME_ACCESSIBILITY=1, start mozilla and visit http://house.sinoi.com/,
Mozilla crash when visiting some http://house.sinoi.com/ → Set GNOME_ACCESSIBILITY=1, start mozilla and visit http://house.sinoi.com/
| Assignee | ||
Updated•21 years ago
|
Attachment #144298 -
Flags: superreview?(Henry.Jia)
Comment on attachment 144298 [details] [diff] [review]
patch v1
sr=Henry
Attachment #144298 -
Flags: superreview?(Henry.Jia) → superreview+
| Assignee | ||
Comment 3•21 years ago
|
||
Thanks for r and sr. Patch checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•21 years ago
|
||
This bug is not fixed - the patch was checked in but later backed out.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 5•21 years ago
|
||
Comment on attachment 144298 [details] [diff] [review]
patch v1
This is a simple crash fix which is triggered when running Mozilla with GNOME
accessibility enabled.
Attachment #144298 -
Flags: approval1.7?
Changing summary, adding crash keyword, -> Louie
Assignee: aaronleventhal → Louie.Zhao
Status: REOPENED → NEW
Keywords: crash
Summary: Set GNOME_ACCESSIBILITY=1, start mozilla and visit http://house.sinoi.com/ → crash @ nsAccessibleHyperText
*** Bug 238993 has been marked as a duplicate of this bug. ***
Comment 8•21 years ago
|
||
So what is the underlying bug here? The NS_ASSERTION makes me think this is an
unexpected condition, yet it's hit on a number of web sites.
| Assignee | ||
Comment 9•21 years ago
|
||
nsAccessible::GetParentBlockFrame is to find the first Block Frame from the
current DOMNode. The code assumes there is always one block frame in the parent
chain, but unfortuately this is not always true in some cases (especially the
page is constructed using table). Since there are some other important a11y bugs
to solve, I made the workaround to avoid crash and will find the real reason later.
Comment 10•21 years ago
|
||
*** Bug 239417 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Blocks: aix-access
Comment 11•21 years ago
|
||
Comment on attachment 144298 [details] [diff] [review]
patch v1
a=mkaply
Are we going to keep this bug open to find the real problem?
Attachment #144298 -
Flags: approval1.7? → approval1.7+
Comment 12•21 years ago
|
||
Since this is a crash bug, it's better to fix it in 1.7. Using this workaround
patch for now, we can find the real problem in a new bug.
Comment 13•21 years ago
|
||
Fixed. A new bug should be opened to track down the real cause of this problem.
Checking in nsAccessibleHyperText.cpp;
/cvsroot/mozilla/accessible/src/atk/nsAccessibleHyperText.cpp,v <--
nsAccessibleHyperText.cpp
new revision: 1.18; previous revision: 1.17
done
Status: NEW → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Severity: normal → critical
Updated•21 years ago
|
Summary: crash @ nsAccessibleHyperText → M17beta crash [@ nsAccessibleHyperText::nsAccessibleHyperText ] [@ _ZN21nsAccessibleHyperTextC2EP10nsIDOMNodeP16nsIWeakReference]
Updated•21 years ago
|
Summary: M17beta crash [@ nsAccessibleHyperText::nsAccessibleHyperText ] [@ _ZN21nsAccessibleHyperTextC2EP10nsIDOMNodeP16nsIWeakReference] → M17beta crash [@ nsAccessibleHyperText::nsAccessibleHyperText ]
Updated•14 years ago
|
Crash Signature: [@ nsAccessibleHyperText::nsAccessibleHyperText ]
You need to log in
before you can comment on or make changes to this bug.
Description
•