Bug 237957 - crash @ nsAccessibleHyperText r=kyle.yuan@sun.com, sr=Henry.Jia@sun.com, a=mkaply@us.ibm.com Patch contributed by Louie Zhao <Louie.Zhao@sun.com>